kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai_project-service
spec:
  selector:
    app: ai_project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
