kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai_project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ai_project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai_project-service
                port:
                  number: 80
